--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,1 +1,55 @@
-<h1>This is the index page</h1>
+<div class="container-fluid">
+	<div class="row">
+		<%= form_tag(flights_path, method: "get") do %>
+			<%= label_tag(:departure_airport_id, "Departure Airport:") %>
+			<%= select_tag(:departure_airport_id, options_for_select(@airports), class: "form-control") %>
+
+			<%= label_tag(:destination_airport_id, "Destination:") %>
+			<%= select_tag(:destination_airport_id, options_for_select(@airports), class: "form-control") %>
+
+			<%= label_tag(:departure_date, "Date:") %>
+			<%= select_tag(:departure_date, options_for_select(@dates), class: "form-control") %>
+
+			<%= label_tag(:passengers, "Number of Passengers:") %>
+			<%= select_tag(:passengers, options_for_select(@passenger_options), class: "form-control") %>
+
+			<%= submit_tag("Search") %>
+
+  			
+
+
+
+		<% end %>
+		<% unless @flights.empty? %>
+			<table class="table-bordered">
+				<thead>
+					<tr>
+						<th></th>
+						<th>Flight No:</th>
+						<th>Departing from:</th>
+						<th>Destination</th>
+						<th>Date:</th>
+						<th>Take of Date:</th>
+					</tr>
+				</thead>
+
+				<%= form_tag(new_booking_path, method: "get") do %>
+					<tbody>
+					<% @flights.each do |flight| %>
+						<tr>
+							<td><%= radio_button_tag(:flight_id, flight.id) %></td>
+							<td><%= flight.id %></td>
+							<td><%= flight.departure_airport.location %></td>
+							<td><%= flight.destination_airport.location %></td>
+							<td><%= flight.departure_date.strftime("%d/%m/%Y") %></td>
+							<td><%= flight.departure_date.strftime("%H:%M") %></td>
+						</tr>
+					</tbody>
+					<% end %>
+			</table>
+			<%= hidden_field_tag(:passengers, params[:passengers]) %>
+			<%= submit_tag("Continue") %>
+		<% end %>
+	<% end %>
+	</div>
+</div>
