--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,13 @@
 </head>
 <body>
 	<%= render 'layouts/header' %>
-
-<%= yield %>
-
-<%= render 'layouts/footer' %>
-
+	<div class="container-fluid">
+		<% flash.each do |message_type, message| %>
+			<%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+		<% end %>
+		<%= yield %>
+		
+	</div>
+	<%= render 'layouts/footer' %>
 </body>
 </html>
