--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,5 @@
+@import "bootstrap-sprockets";
+@import "bootstrap";
 * {
 	box-sizing: border-box;
 }
@@ -16,8 +18,38 @@ body{
 }
 
 .navbar-default{
+	background-color: #2980B9;
 	height: 75px;
+	border-radius: 0;
+	border: 0;
+}
 
+.navbar-brand.logo{
+	color: #fff;
+}
+
+
+/* forms */
+
+.form-control{
+	background-color: transparent;
+}
+
+
+/* index page */
+.search{
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
+
+.search-results{
+	margin-bottom: 50px;
+}
+
+h3{
+	border-bottom: 1px solid #000;
+	line-height: 1.5em;
+	margin-top: 0
 }
 
 
@@ -28,11 +60,13 @@ body{
 
 html{
 	position: relative;
-	min-height: 100%
+	min-height: 100%;
+	background-color: #eee;
 }
 
 body{
 	margin-bottom: 70px;
+	background-color: #eee;
 }
 
 footer {
@@ -45,14 +79,15 @@ footer {
 }
 
 .copy{
-	margin-top: 40px;
+	margin-top: 35px;
+	color: #fff;
 }
 
 .contact ul li{
 	display: inline-block;
 	font-size: 25px;
 	padding-right: 10px;
-	color: #fff;
+	color: #000;
 
 }
 
@@ -70,7 +105,7 @@ footer {
 }
 
 .contact ul li a:hover{
-	color:#2b3e50;
+	color:#2980B9;
 }
 
 
