--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,32 +1,49 @@
-<div class="container-fluid">
-	<div class="row">
-		<%= form_tag(flights_path, method: "get") do %>
-			<%= label_tag(:departure_airport_id, "Departure Airport:") %>
-			<%= select_tag(:departure_airport_id, options_for_select(@airports, params[:depatrure_airport_id]), class: "form-control") %>
+<div class="row search">
 
-			<%= label_tag(:destination_airport_id, "Destination:") %>
-			<%= select_tag(:destination_airport_id, options_for_select(@airports, params[:destination_airport_id]), class: "form-control") %>
+	<div class="col-sm-6 col-sm-offset-3 well">
+		<h3>Search for a flight</h3>
 
-			<%= label_tag(:departure_date, "Date:") %>
-			<%= select_tag(:departure_date, options_for_select(@dates, params[:departure_date]), class: "form-control") %>
+			<%= form_tag(flights_path, method: "get") do %>
 
-			<%= label_tag(:passengers, "Number of Passengers:") %>
-			<%= select_tag(:passengers, options_for_select(@passenger_options, params[:passengers]), class: "form-control") %>
+				<div class="form-group col-md-6">
+					<%= label_tag(:departure_airport_id, "Departure Airport:") %>
+					<%= select_tag(:departure_airport_id, options_for_select(@airports, params[:depatrure_airport_id]), class: "form-control") %>
+				</div>
 
-			<%= submit_tag("Search") %>
+				<div class="form-group col-md-6">
+					<%= label_tag(:destination_airport_id, "Destination Airport:") %>
+					<%= select_tag(:destination_airport_id, options_for_select(@airports, params[:destination_airport_id]), class: "form-control") %>
+				</div>
+
+				<div class="form-group col-md-6">
+					<%= label_tag(:departure_date, "Date:") %>
+					<%= select_tag(:departure_date, options_for_select(@dates, params[:departure_date]), class: "form-control") %>
+				</div>
+
+				<div class="form-group col-md-6">
+					<%= label_tag(:passengers, "Number of Passengers:") %>
+					<%= select_tag(:passengers, options_for_select(@passenger_options, params[:passengers]), class: "form-control") %>
+				</div>
+
+				<%= submit_tag "Search", class: "btn btn-primary col-md-4 col-md-offset-8" %>
+			<% end %>
+	</div>
+</div>
+				
 
   			
+<% unless @flights.empty? %>
+	<div class="row search-results">
 
+		<div class="col-sm-6 col-sm-offset-3 well">
+			<h3>Choose a flight</h3>
 
-
-		<% end %>
-		<% unless @flights.empty? %>
-			<table class="table-bordered">
+			<table class="table table-hover">
 				<thead>
 					<tr>
 						<th></th>
 						<th>Flight No:</th>
-						<th>Departing from:</th>
+						<th>Departing From:</th>
 						<th>Destination</th>
 						<th>Date:</th>
 						<th>Take of Date:</th>
@@ -35,21 +52,23 @@
 
 				<%= form_tag(new_booking_path, method: "get") do %>
 					<tbody>
-					<% @flights.each do |flight| %>
-						<tr>
-							<td><%= radio_button_tag(:flight_id, flight.id) %></td>
-							<td><%= flight.id %></td>
-							<td><%= flight.departure_airport.location %></td>
-							<td><%= flight.destination_airport.location %></td>
-							<td><%= flight.departure_date.strftime("%d/%m/%Y") %></td>
-							<td><%= flight.departure_date.strftime("%H:%M") %></td>
-						</tr>
+						<% @flights.each do |flight| %>
+							<tr>
+								<td><%= radio_button_tag(:flight_id, flight.id) %></td>
+								<td><%= flight.id %></td>
+								<td><%= flight.departure_airport.location %></td>
+								<td><%= flight.destination_airport.location %></td>
+								<td><%= flight.departure_date.strftime("%d/%m/%Y") %></td>
+								<td><%= flight.departure_date.strftime("%H:%M") %></td>
+							</tr>
+						<% end %>
 					</tbody>
-					<% end %>
 			</table>
-			<%= hidden_field_tag(:passengers, params[:passengers]) %>
-			<%= submit_tag("Continue") %>
-		<% end %>
-	<% end %>
+					<%= hidden_field_tag(:passengers, params[:passengers]) %>
+					<%= submit_tag"Continue", class: "btn btn-success col-md-4 col-md-offset-8" %>
+				<% end %>
+						
+		</div>
 	</div>
-</div>
+<% end %>
+	
