--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,38 +1,46 @@
+  <div class="row passenger_details">
+    <div class="col-md-6 col-md-offset-3">
 
-<p><%= @num_of_passengers %></p>
+      <%= form_for @booking do |flight|  %>
+        <% if @booking.errors.any? %>
+          <div id="error_explanation">
 
-<%= form_for @booking do |flight|  %>
-  <% if @booking.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@booking.errors.count, "error") %> 
-      </h2>
+            <h2>
+              <%= pluralize(@booking.errors.count, "error") %> 
+            </h2>
  
-      <ul>
-      <% @booking.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+            <ul>
+              <% @booking.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+              <% end %>
+            </ul>
+          </div>
       <% end %>
-      </ul>
+      <% passenger_num = 1 %>
+      <%= flight.fields_for :passengers do |passenger| %>
+        <div class="row">
+          <div class="col-md-12 well">
+            <h3>Passenger <%= passenger_num %></h3>
+            <% passenger_num += 1 %>
+
+		        <%= passenger.label :name, "Passenger Name"%>
+		        <%= passenger.text_field :name, class: "form-control"%>
+
+
+		        <%= passenger.label :email, "Passenger Email Address" %>
+		        <%= passenger.text_field :email, class: "form-control" %>
     </div>
-  <% end %>
-  
-
-
-	
-	<%= flight.fields_for :passengers do |passenger| %>
-		<%= passenger.label :name, "Passenger Name"%>
-		<%= passenger.text_field :name, class: "form-control"%>
-
-		<%= passenger.label :email, "Passenger Email Address" %>
-		<%= passenger.text_field :email, class: "form-control" %>
-		<br />
+  </div>
 	<% end %>
 
- 
+  <%= hidden_field_tag(:passengers, params[:passengers]) %>
   <%= flight.hidden_field :flight_id, value: params[:flight_id] %>
+  <%= hidden_field_tag(:flight_id, params[:flight_id]) %>
   
 	
 
-	<%= flight.submit "Book Flight" %>
+	<%= flight.submit "Book Flight", class: "btn btn-success btn-lg col-md-4 col-md-offset-4" %>
 
 <% end %>
+</div>
+</div>
