--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,41 +1,48 @@
-<h1>Your flight has been booked</h1>
+<div class="row">
+	<div class="col-md-6 col-md-offset-3">
+		<h1>Your Flight has Been Booked!</h1>
 
-<h3>Flight Details</h3>
-<table>
-	<thead>
-		<tr>
-			<th>Booking Number:</th>
-			<th>Departing Airport</th>
-			<th>Destination Airport</th>
-			<th>Departure Date</th>
-			<th>Departure Time</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td><%= @booking.id %></td>
-			<td><%= @booking.flight.departure_airport.code %></td>
-			<td><%= @booking.flight.destination_airport.code %></td>
-			<td><%= @booking.flight.departure_date.strftime("%d/%m/%Y") %></td>
-			<td><%= @booking.flight.departure_date.strftime("%H:%M") %></td>
-		</tr>
-	</tbody>
-</table>
+		<h3>Flight Details</h3>
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Booking Number:</th>
+					<th>Departing Airport</th>
+					<th>Destination Airport</th>
+					<th>Departure Date</th>
+					<th>Departure Time</th>
+				</tr>
+			</thead>
 
-<h3>Passenger details</h3>
-<table>
-	<thead>
-		<tr>
-			<th>Name</th>
-			<th>Email</th>
-		</tr>
-	</thead>
-	<tbody>
-<% @booking.passengers.each do |p| %>
-	<tr>
-		<td><%= p.name %></td>
-		<td><%= p.email %></td>
-	</tr>
-<% end %>
-</tbody>
-</table>
+			<tbody>
+				<tr>
+					<td><%= @booking.id %></td>
+					<td><%= @booking.flight.departure_airport.code %></td>
+					<td><%= @booking.flight.destination_airport.code %></td>
+					<td><%= @booking.flight.departure_date.strftime("%d/%m/%Y") %></td>
+					<td><%= @booking.flight.departure_date.strftime("%H:%M") %></td>
+				</tr>
+			</tbody>
+		</table>
+
+		<h3>Passenger details</h3>
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Name</th>
+					<th>Email</th>
+				</tr>
+			</thead>
+
+			<tbody>
+				<% @booking.passengers.each do |p| %>
+					<tr>
+						<td><%= p.name %></td>
+						<td><%= p.email %></td>
+					</tr>
+				<% end %>
+			</tbody>
+		</table>
+		
+	</div>
+</div>
