--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,14 @@
 	<%= render 'layouts/header' %>
 	<div class="container-fluid">
 		<% flash.each do |message_type, message| %>
-			<%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+		<div class="alert alert-<%= message_type%> alert-dismissible" role="alert">
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+			<ul>
+				<li>
+					<%= message %>
+				</li>
+			</ul>
+			</div>
 		<% end %>
 		<%= yield %>
 		
