--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -10,7 +10,10 @@ body{
 }
 
 
-/* header */
+/*====================
+  	Header
+======================*/
+
 .logo{
 	font-size: 40px;
 	padding: 25px 15px;
@@ -28,15 +31,19 @@ body{
 	color: #fff;
 }
 
+.navbar-brand.logo:hover{
+	color: #F2F2F2;
+}
 
-/* forms */
-
-.form-control{
-	background-color: transparent;
+.rm-p{
+	padding-left: 0!important;
 }
 
 
-/* index page */
+/*====================
+   New Booking Page
+======================*/
+
 .search{
 	margin-top: 30px;
 	margin-bottom: 30px;
@@ -49,7 +56,8 @@ body{
 h3{
 	border-bottom: 1px solid #000;
 	line-height: 1.5em;
-	margin-top: 0
+	margin-top: 0;
+	margin-bottom: 30px;
 }
 
 /* passenger details page */
@@ -58,11 +66,45 @@ h3{
 	margin-bottom: 50px;
 }
 
+.form-group{
+	padding-right: 0;
+}
+
+
+
+.flight-details{
+}
+
+/*====================
+   New Booking Page
+======================*/
+
+.passenger-box{
+	padding-bottom: 40px;
+}
+
+.control-label{
+	text-align: left;
+}
+
+/*====================
+   Show Booking Page
+======================*/
+
+h1{
+	text-align: center;
+}
+
+.booking{
+	margin-bottom: 10%;
+}
 
 
 
 
-/* footer */
+/*====================
+   Footer
+======================*/
 
 html{
 	position: relative;
