--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,7 +1,39 @@
   <div class="row passenger_details">
     <div class="col-md-6 col-md-offset-3">
 
-      <%= form_for @booking do |flight|  %>
+      <div class="row">
+        <h2>Passenger Details</h2>
+        <p>Please enter passenger details for flight:</p>
+
+        <div class=" col-md-12 well flight-details">
+          <div class"panel-body">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>Flight Number:</th>
+                  <th>Departing Airport</th>
+                  <th>Destination Airport</th>
+                  <th>Departure Date</th>
+                  <th>Departure Time</th>
+                </tr>
+              </thead>
+
+              <tbody>
+                <tr>
+                  <td><%= @flight.id %></td>
+                  <td><%= @flight.departure_airport.code %></td>
+                  <td><%= @flight.destination_airport.code %></td>
+                  <td><%= @flight.departure_date.strftime("%d/%m/%Y") %></td>
+                  <td><%= @flight.departure_date.strftime("%H:%M") %></td>
+                </tr>
+              </tbody>
+            </table>
+            </div>
+          </div>
+          </div>
+ 
+
+      <%= form_for @booking, :html => { :class => "form-horizontal" } do |flight|  %>
         <% if @booking.errors.any? %>
           <div id="error_explanation">
 
@@ -15,32 +47,39 @@
               <% end %>
             </ul>
           </div>
-      <% end %>
-      <% passenger_num = 1 %>
-      <%= flight.fields_for :passengers do |passenger| %>
-        <div class="row">
-          <div class="col-md-12 well">
-            <h3>Passenger <%= passenger_num %></h3>
-            <% passenger_num += 1 %>
+        <% end %>
 
-		        <%= passenger.label :name, "Passenger Name"%>
-		        <%= passenger.text_field :name, class: "form-control"%>
+        <% passenger_num = 1 %>
 
+        <%= flight.fields_for :passengers do |passenger| %>
+          <div class="row">
+            <div class="col-md-12 well passenger-box">
+              <h3>Passenger <%= passenger_num %></h3>
+              <% passenger_num += 1 %>
 
-		        <%= passenger.label :email, "Passenger Email Address" %>
-		        <%= passenger.text_field :email, class: "form-control" %>
-    </div>
-  </div>
-	<% end %>
+              <div class="form-group">
+		            <%= passenger.label :name, "Name:", class: "control-label col-sm-2"%>
+                <div class="col-md-9">
+		              <%= passenger.text_field :name, class: "form-control"%>
+                </div>
+              </div>
 
-  <%= hidden_field_tag(:passengers, params[:passengers]) %>
-  <%= flight.hidden_field :flight_id, value: params[:flight_id] %>
-  <%= hidden_field_tag(:flight_id, params[:flight_id]) %>
+              <div class="form-group">
+		            <%= passenger.label :email, "Email:", class: "control-label col-sm-2" %>
+                <div class="col-md-9">
+		              <%= passenger.text_field :email, class: "form-control" %>
+                </div>
+              </div>
+
+            </div>
+          </div>
+	     <% end %>
+
+        <%= hidden_field_tag(:passengers, params[:passengers]) %>
+        <%= flight.hidden_field :flight_id, value: params[:flight_id] %>
+        <%= hidden_field_tag(:flight_id, params[:flight_id]) %>
   
-	
-
-	<%= flight.submit "Book Flight", class: "btn btn-success btn-lg col-md-4 col-md-offset-4" %>
-
-<% end %>
-</div>
+	       <%= flight.submit "Book Flight", class: "btn btn-success btn-lg col-md-4 col-md-offset-4" %>
+      <% end %>
+  </div>
 </div>
