--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,8 +1,9 @@
+<h1>Your Flight has Been Booked!</h1>
 <div class="row">
-	<div class="col-md-6 col-md-offset-3">
-		<h1>Your Flight has Been Booked!</h1>
+	<div class="col-md-6 col-md-offset-3 well booking">
 
 		<h3>Flight Details</h3>
+
 		<table class="table">
 			<thead>
 				<tr>
@@ -43,6 +44,6 @@
 				<% end %>
 			</tbody>
 		</table>
-		
+
 	</div>
 </div>
