--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -8,7 +8,7 @@
 
 			<%= form_tag(flights_path, method: "get") do %>
 
-				<div class="form-group col-md-6">
+				<div class="form-group col-md-6 rm-p">
 					<%= label_tag(:departure_airport_id, "Departure Airport:") %>
 					<%= select_tag(:departure_airport_id, options_for_select(@airports, @departure_airport), class: "form-control") %>
 				</div>
@@ -18,7 +18,7 @@
 					<%= select_tag(:destination_airport_id, options_for_select(@airports, @destination_airport), class: "form-control", id: "destination-select") %>
 				</div>
 
-				<div class="form-group col-md-6">
+				<div class="form-group col-md-6 rm-p">
 					<%= label_tag(:departure_date, "Date:") %>
 					<%= select_tag(:departure_date, options_for_select(@dates, @depart_date), class: "form-control") %>
 				</div>
