--- a/app/views/passenger_mailer/thank_you.text.erb
+++ b/app/views/passenger_mailer/thank_you.text.erb
@@ -1,6 +1,6 @@
 Hi <%= @passenger.name %>
 
-Your booking for flight <%= @passenger.bookings.last.flight_id %> from <%= @from_location %> to <%= @to_location %>, has been successful
+Your booking for flight <%= @passenger.bookings.last.flight_id %> from <%= @from_location %> to <%= @to_location %>, has been successful.
 
 Please ensure you arrive at the aiport early before you flight, it would be a shame if you missed it!
 
